# henry_task_03

./: .env.example  .gitignore  README.md  TECHNICAL_REPORT.md  implementation_decisions.md  pyproject.toml  requirements.txt  test_queries.json
data/finance_docs/: 01_expense_reimbursement_policy.md  02_travel_and_corporate_card_guide.md  03_purchasing_and_vendor_payments.md  04_payroll_and_compensation_faq.md  05_budgeting_and_approvals_guide.md  06_travel_expense_scenarios_and_examples.md  07_cost_center_and_budget_ownership_guide.md  08_corporate_card_best_practices_and_faq.md  09_capital_vs_operating_expenses_guide.md  10_employee_reimbursements_and_payroll_adjustments.md
data/hr_docs/: 01_pto_and_leave_policy.md  02_employee_benefits.md  03_onboarding_guide.md  04_performance_management.md  05_code_of_conduct.md  06_remote_work_policy.md  07_travel_and_expense_policy.md  08_disciplinary_and_conduct_actions.md
data/legal_docs/: 01_privacy_and_data_protection_policy.md  02_contract_approval_and_signing_policy.md  03_intellectual_property_and_confidentiality.md  04_compliance_and_ethics_reporting.md  05_records_retention_and_legal_holds.md  06_marketing_and_external_communications_review_policy.md  07_anti_bribery_and_anti_corruption_policy.md  09_third_party_risk_management_policy.md  (+4 more)
src/: __init__.py  config.py  evaluator.py  indexing.py  multi_agent_system.py
traces/: trace-36de26b2-698e-4147-9ec1-beabe7d13671.json  trace-3de8e214-9290-44dc-9588-a91425b328bb.json  trace-bb3bd0af-e148-4fed-a1a2-f341200a0b15.json  trace-ce6cff1d-0bd4-483a-9f1e-cd35f540eb43.json
(+15 files in other folders)
